# atlasWrapper

./: CMakeLists.txt  LICENSE  README.md  build.sh
CMake/: Atlas200SOC.cmake  FindDDK.cmake
Common/: Common.h  DynamicGraph.h  dvpp_utils.h  engine_tools.h  stream_data.h  utils_common.h
Common/scripts/: build_tools.sh
DstEngine/: CMakeLists.txt  DstEngine.cpp  DstEngine.h
InferEngine/: .CMakeLists.txt.swp  CMakeLists.txt  Inference.cpp  Inference.h
include/: Graph.hpp  Net.hpp  net_utils.h
py/: PyNet.cpp
src/: Graph.cpp  Net.cpp
test/: test.py  test_detection.cpp  test_embedding.cpp
